@@ -11,6 +11,7 @@ Release ...
   now be read (thanks to Stefan Tramm).
 * troff/dpost/otfdump: TrueType handling has been made more robust against
   an error in Microsoft/Unicode "cmap" subtables.
+* dpost: Error messages now include the number of the current output page.
 
 Release 051227
 * [nt]roff: A new extension level "3" is available. In this level, undefined
